crates/cockpitctl-conform/tests/snapshots/conformance_expansion_tests__path_hygiene_multiple_traversals.snap
---
source: crates/cockpitctl-conform/tests/conformance_expansion_tests.rs
expression: result
---
ConformResult {
    violations: [
        Violation {
            check: "path_hygiene",
            message: "finding[0]: path traversal (contains ..): ../secret",
        },
        Violation {
            check: "path_hygiene",
            message: "finding[1]: path traversal (contains ..): foo/../../bar",
        },
        Violation {
            check: "path_hygiene",
            message: "finding[2]: path traversal (contains ..): foo\\..\\bar",
        },
        Violation {
            check: "path_hygiene",
            message: "finding[2]: backslash in path: foo\\..\\bar",
        },
        Violation {
            check: "path_hygiene",
            message: "finding[3]: absolute path (drive letter): D:\\Windows\\System32",
        },
        Violation {
            check: "path_hygiene",
            message: "finding[3]: backslash in path: D:\\Windows\\System32",
        },
        Violation {
            check: "path_hygiene",
            message: "finding[4]: absolute path (starts with / or \\): /etc/passwd",
        },
    ],
}
