crates/cockpitctl-conform/tests/snapshots/conformance_expansion_tests__reason_lint_capability_invalid.snap
---
source: crates/cockpitctl-conform/tests/conformance_expansion_tests.rs
expression: result
---
ConformResult {
    violations: [
        Violation {
            check: "schema",
            message: "\"Bad-Reason\" does not match \"^[a-z0-9_]+$\"",
        },
    ],
}
