crates/cockpitctl-conform/tests/snapshots/conformance_expansion_tests__schema_missing_tool.snap
---
source: crates/cockpitctl-conform/tests/conformance_expansion_tests.rs
expression: result
---
ConformResult {
    violations: [
        Violation {
            check: "schema",
            message: "\"tool\" is a required property",
        },
    ],
}
