crates/cockpitctl-conform/tests/snapshots/conformance_expansion_tests__sensor_id_format_dots.snap
---
source: crates/cockpitctl-conform/tests/conformance_expansion_tests.rs
expression: result
---
ConformResult {
    violations: [
        Violation {
            check: "sensor_id_format",
            message: "sensor_id \"bad.sensor.id\" does not match [a-zA-Z0-9_-]+",
        },
    ],
}
