crates/cockpitctl-conform/tests/snapshots/conformance_expansion_tests__sensor_id_format_valid.snap
---
source: crates/cockpitctl-conform/tests/conformance_expansion_tests.rs
expression: result
---
ConformResult {
    violations: [],
}
